--- a/trunk/src/proj/MSVC8.0/biwoolib.vcproj
+++ b/trunk/src/proj/MSVC8.0/biwoolib.vcproj
@@ -43,6 +43,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
+				AdditionalIncludeDirectories="..\..\ThirdParty;&quot;$(MYCP_ROOT)\src&quot;;&quot;$(BODB_ROOT)\src&quot;"
 				PreprocessorDefinitions="WIN32;_WINDOWS;_DEBUG;_USRDLL"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -112,6 +113,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
+				AdditionalIncludeDirectories="..\..\ThirdParty;&quot;$(MYCP_ROOT)\src&quot;;&quot;$(BODB_ROOT)\src&quot;"
 				PreprocessorDefinitions="WIN32;_WINDOWS;NDEBUG;_USRDLL"
 				RuntimeLibrary="2"
 				UsePrecompiledHeader="0"
