--- a/branches/jiangtao/src/proj/MSVC8.0/biwooclient.vcproj
+++ b/branches/jiangtao/src/proj/MSVC8.0/biwooclient.vcproj
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="gb2312"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8.00"
+	Version="9.00"
 	Name="biwooclient"
 	ProjectGUID="{D978D7A8-AB56-421B-95AC-BAD0B9DFE50E}"
 	RootNamespace="biwooclient"
 	Keyword="Win32Proj"
+	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
 		<Platform
@@ -40,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="&quot;$(MYCP_ROOT)\src&quot;;&quot;$(BODB_ROOT)\src&quot;;&quot;$(WXWIDGETS_ROOT)\include&quot;"
+				AdditionalIncludeDirectories="&quot;$(BOOST_ROOT)/include/$(BOOST_VERSION)&quot;;&quot;$(BIWOO_3rd_ROOT)&quot;;&quot;$(MYCP_ROOT)/src&quot;;&quot;$(BODB_ROOT)&quot;;&quot;$(XVID_ROOT)/src&quot;;&quot;$(FFMPEG_ROOT)/include&quot;;&quot;$(WX_WIDGETS_ROOT)/include&quot;;&quot;$(WX_WIDGETS_ROOT)/include/msvc&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;__WXMSW__;__WXDEBUG__"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -64,9 +65,11 @@
 				AdditionalDependencies="wxmsw28d_richtext.lib wxmsw28d_adv.lib wxmsw28d_html.lib wxmsw28d_core.lib wxbase28d.lib wxtiffd.lib wxjpegd.lib wxpngd.lib wxzlibd.lib wxregexd.lib wxexpatd.lib comctl32.lib rpcrt4.lib winmm.lib uuid.lib"
 				OutputFile="../../build/$(ProjectName)d.exe"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="..\..\ThirdParty\build;&quot;$(MYCP_ROOT)\src\build&quot;;&quot;$(BODB_ROOT)\src\build&quot;;&quot;$(WXWIDGETS_ROOT)\lib\vc_lib&quot;"
+				AdditionalLibraryDirectories="&quot;$(WX_WIDGETS_ROOT)/lib/vc_lib&quot;;C:\msys\1.0\local\lib;&quot;$(BOOST_ROOT)/lib&quot;;&quot;$(BIWOO_ROOT)/src/build&quot;;&quot;$(BIWOO_3rd_ROOT)/build&quot;;&quot;$(JTHREAD_ROOT)/bin&quot;;&quot;$(JRTPLIB_ROOT)/lib&quot;;&quot;$(MYCP_ROOT)/src/build&quot;;&quot;$(DXSDK_ROOT)/lib&quot;;&quot;$(FFMPEG_ROOT)/bin&quot;;&quot;$(XVID_ROOT)\build\win32\bin&quot;;&quot;$(OLD_X264)\build\win32\bin&quot;;&quot;$(BODB_ROOT)\build&quot;"
 				GenerateDebugInformation="true"
 				SubSystem="2"
+				RandomizedBaseAddress="1"
+				DataExecutionPrevention="0"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -86,9 +89,6 @@
 			/>
 			<Tool
 				Name="VCAppVerifierTool"
-			/>
-			<Tool
-				Name="VCWebDeploymentTool"
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
@@ -119,7 +119,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories="&quot;$(MYCP_ROOT)\src&quot;;&quot;$(BODB_ROOT)\src&quot;;&quot;$(WXWIDGETS_ROOT)\include&quot;"
+				AdditionalIncludeDirectories="&quot;$(BOOST_ROOT)/include/$(BOOST_VERSION)&quot;;&quot;$(BIWOO_3rd_ROOT)&quot;;&quot;$(MYCP_ROOT)/src&quot;;&quot;$(BODB_ROOT)&quot;;&quot;$(XVID_ROOT)/src&quot;;&quot;$(FFMPEG_ROOT)/include&quot;;&quot;$(WX_WIDGETS_ROOT)/include&quot;;&quot;$(WX_WIDGETS_ROOT)/include/msvc&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS"
 				RuntimeLibrary="2"
 				UsePrecompiledHeader="0"
@@ -141,11 +141,13 @@
 				AdditionalDependencies="wxmsw28_richtext.lib wxmsw28_adv.lib wxmsw28_html.lib wxmsw28_core.lib wxbase28.lib wxtiff.lib wxjpeg.lib wxpng.lib wxzlib.lib wxregex.lib wxexpat.lib comctl32.lib rpcrt4.lib winmm.lib uuid.lib wsock32.lib"
 				OutputFile="../../build/$(ProjectName).exe"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="..\..\ThirdParty\build;&quot;$(MYCP_ROOT)\src\build&quot;;&quot;$(BODB_ROOT)\src\build&quot;;&quot;$(WXWIDGETS_ROOT)\lib\vc_lib&quot;"
+				AdditionalLibraryDirectories="&quot;$(WX_WIDGETS_ROOT)/lib/vc_lib&quot;;C:\msys\1.0\local\lib;&quot;$(BOOST_ROOT)/lib&quot;;&quot;$(BIWOO_ROOT)/src/build&quot;;&quot;$(BIWOO_3rd_ROOT)/build&quot;;&quot;$(JTHREAD_ROOT)/bin&quot;;&quot;$(JRTPLIB_ROOT)/lib&quot;;&quot;$(MYCP_ROOT)/src/build&quot;;&quot;$(DXSDK_ROOT)/lib&quot;;&quot;$(FFMPEG_ROOT)/bin&quot;;&quot;$(XVID_ROOT)\build\win32\bin&quot;;&quot;$(OLD_X264)\build\win32\bin&quot;;&quot;$(BODB_ROOT)\build&quot;"
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
+				RandomizedBaseAddress="1"
+				DataExecutionPrevention="0"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -165,9 +167,6 @@
 			/>
 			<Tool
 				Name="VCAppVerifierTool"
-			/>
-			<Tool
-				Name="VCWebDeploymentTool"
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
