--- a/branches/jiangtao/src/proj/MSVC8.0/biwooclient.vcproj
+++ b/branches/jiangtao/src/proj/MSVC8.0/biwooclient.vcproj
@@ -18,7 +18,7 @@
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
-			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
+			OutputDirectory="D:\home\jiangtao\opensource\biwoo\branches\jiangtao\bin\BiwooClient"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="1"
 			CharacterSet="2"
@@ -63,7 +63,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="wxmsw28d_richtext.lib wxmsw28d_adv.lib wxmsw28d_html.lib wxmsw28d_core.lib wxbase28d.lib wxtiffd.lib wxjpegd.lib wxpngd.lib wxzlibd.lib wxregexd.lib wxexpatd.lib comctl32.lib rpcrt4.lib winmm.lib uuid.lib"
-				OutputFile="../../build/$(ProjectName)d.exe"
+				OutputFile="$(OutDir)\$(ProjectName)d.exe"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories="&quot;$(WX_WIDGETS_ROOT)/lib/vc_lib&quot;;C:\msys\1.0\local\lib;&quot;$(BOOST_ROOT)/lib&quot;;&quot;$(BIWOO_ROOT)/src/build&quot;;&quot;$(BIWOO_3rd_ROOT)/build&quot;;&quot;$(JTHREAD_ROOT)/bin&quot;;&quot;$(JRTPLIB_ROOT)/lib&quot;;&quot;$(MYCP_ROOT)/src/build&quot;;&quot;$(DXSDK_ROOT)/lib&quot;;&quot;$(FFMPEG_ROOT)/bin&quot;;&quot;$(XVID_ROOT)\build\win32\bin&quot;;&quot;$(OLD_X264)\build\win32\bin&quot;;&quot;$(BODB_ROOT)\build&quot;"
 				GenerateDebugInformation="true"
